level-1/style.css
*,*::before, *::after {
  box-sizing: border-box;
 }

 body {
  background-color:rgb(255, 255, 255);
  margin: 0;
  padding: 0;
  font-family:'Times New Roman', Times, serif;
  min-height: 100vh;
}

.page {
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  padding: 0.5rem;
  min-height: 100vh ;
}

.header {
  background-color: black;
  display: flex;
  flex-direction: column;
  flex: 1;
  padding: 1rem;
  gap: 1rem;
}

.header-container {
  background-color: rgb(59, 68, 88);
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1rem;
  gap: 1rem;

}

.logo {
  min-height: 2.5rem;
  display: flex;
  align-items: center;
  flex: 1;
  background-color:rgb(254, 66, 66);
  padding-left: 0.5rem;
}

.nav {
  min-height: 2.5rem;
  flex: 3;
  display: flex;
  align-items: center;
  background-color:rgb(254, 66, 66);
  padding-left: 0.5rem;
}

.social {
  min-height: 2.5rem;
  flex: 1;
  display: flex;
  align-items: center;
  background-color:rgb(254, 66, 66);
  padding-left: 0.5rem;
}

.banner-container {
  padding: 1rem;
  background-color: rgb(255, 174, 0);
  flex: 1;
}

.banner-content {
  min-height: 4rem;
  display: flex;
  align-items: center;
  padding-left: 0.5rem;
  font-size: 30px;
  font-weight: bold;
  background-color: yellow;
  
}

.main {
  display: grid;
  grid-template-columns: 3fr 1fr;
  background-color: black;
  padding: 1rem;
  gap: 1rem;
  flex: 2;
}

.articles-container {
  background-color:rgb(59, 68, 88);
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-content: start;
  gap: 1rem;
  padding: 1rem;
}
.article {
  height: 3rem;
  display: flex;
  align-items: center;
  background-color: blue;
  padding-left: 0.5rem;
  
}
.navigation {
  height: 3.5rem;
  display: flex;
  align-items: center;
  background-color: aqua;
  grid-column: 1/3;
  padding-left:0.5rem;
  
}

.ads-container {
  background-color: rgb(254, 66, 66);
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 1rem; 
}
.ad {
  height: 3rem;
  display: flex;
  align-items: center;
  background-color: yellow;
  padding-left: 0.5rem;
  
}

.footer {
  background-color: black;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 1rem;
  
}

.footer-content {
  height: 3rem;
  display: flex;
  align-items: center;
  flex: 1;
  background-color: khaki;
  padding-left: 0.5rem;
}

@media (max-width: 768px) {
  .header-container {
    display: flex;
    flex-direction: column;
    align-items: stretch;
  }
  .main {
    display: flex;
    flex-direction: column;
  }

}

@media (max-width: 380px ) {
   .articles-container {
     display: flex;
     flex-direction: column;
     align-items: stretch;
   }
  
}
  
  

